[#5] fix: 모달창의 z-index가 낮아서 뒤로 가는 현상 수정

--- a/src/pages/BaseLayout/index.scss
+++ b/src/pages/BaseLayout/index.scss
@@ -95,4 +95,5 @@
 }
 .ReactModal__Overlay {
   background-color: rgba(0, 0, 0, 0.6) !important;
+  z-index: 3;
 }
